--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -95,7 +95,7 @@ header {
         &__frame {
             justify-content: left;
             padding: 0 3vw;
-            width: calc(100% - 6vw + 2.66%);
+            width: calc(100% - 6vw - 2.66%);
         }
     }
 }
